hw7/src/parser.output
State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 66 conflicts: 2 reduce/reduce
State 176 conflicts: 2 shift/reduce
State 184 conflicts: 1 shift/reduce
State 210 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: funDeclaration
    5            | varDeclaration
    6            | error

    7 varDeclaration: typespec vardeclarationList SEMICOLON
    8               | error vardeclarationList SEMICOLON
    9               | typespec error SEMICOLON

   10 scopedtypespecificer: STATIC typespec vardeclarationList SEMICOLON
   11                     | typespec vardeclarationList SEMICOLON

   12 vardeclarationList: vardeclarationList COMMA varDeclarationInit
   13                   | vardeclarationList COMMA error
   14                   | varDeclarationInit
   15                   | error

   16 varDeclarationInit: varDeclarationId
   17                   | varDeclarationId COLON simpleExp
   18                   | error COLON simpleExp

   19 varDeclarationId: ID
   20                 | ID OBRACKET NUMCONST CBRACKET
   21                 | ID OBRACKET error
   22                 | error CBRACKET

   23 typespec: INT
   24         | CHAR
   25         | BOOL

   26 funDeclaration: typespec ID OPAREN parameters CPAREN compoundstatement
   27               | ID OPAREN parameters CPAREN compoundstatement
   28               | typespec error
   29               | typespec ID OPAREN error
   30               | ID OPAREN error
   31               | ID OPAREN parameters CPAREN error

   32 parameters: parameterList
   33           | ε

   34 parameterList: parameterList SEMICOLON parameterTypeList
   35              | parameterTypeList
   36              | parameterList SEMICOLON error
   37              | error

   38 parameterTypeList: typespec parameterIdList
   39                  | typespec error

   40 parameterIdList: parameterIdList COMMA parameterId
   41                | parameterId
   42                | parameterIdList COMMA error
   43                | error

   44 parameterId: ID
   45            | ID OBRACKET CBRACKET

   46 statement: matched
   47          | unmatched

   48 matched: statementEnd
   49        | IF simpleExp THEN matched ELSE matched
   50        | WHILE simpleExp DO matched
   51        | FOR ID ASGN iterRange DO matched
   52        | IF error
   53        | IF error ELSE matched
   54        | IF error THEN matched ELSE matched
   55        | WHILE error DO matched
   56        | WHILE error
   57        | FOR ID ASGN error DO matched
   58        | FOR error

   59 unmatched: IF simpleExp THEN matched ELSE unmatched
   60          | IF simpleExp THEN statement
   61          | WHILE simpleExp DO unmatched
   62          | FOR ID ASGN iterRange DO unmatched
   63          | IF error THEN statement
   64          | IF error THEN matched ELSE unmatched

   65 expstatement: exp SEMICOLON
   66             | SEMICOLON
   67             | error SEMICOLON

   68 statementEnd: expstatement
   69             | compoundstatement
   70             | breakstatement
   71             | returnstatement

   72 compoundstatement: BEGN localdeclaration statementList FINISH

   73 localdeclaration: localdeclaration scopedtypespecificer
   74                 | ε

   75 statementList: statementList statement
   76              | ε

   77 iterRange: simpleExp TO simpleExp
   78          | simpleExp TO simpleExp BY simpleExp
   79          | simpleExp TO error
   80          | error BY error
   81          | simpleExp TO simpleExp BY error

   82 returnstatement: RETURN SEMICOLON
   83                | RETURN exp SEMICOLON
   84                | RETURN error SEMICOLON

   85 breakstatement: BREAK SEMICOLON

   86 asgnop: ASGN
   87       | ADDASGN
   88       | SUBASS
   89       | MULASS
   90       | DIVASS

   91 exp: mutable asgnop exp
   92    | simpleExp
   93    | mutable INC
   94    | mutable DEC
   95    | error asgnop exp
   96    | mutable asgnop error
   97    | error INC
   98    | error DEC

   99 simpleExp: simpleExp OR andExp
  100          | andExp
  101          | simpleExp OR error

  102 andExp: andExp AND unaryRelExp
  103       | unaryRelExp
  104       | andExp AND error

  105 relExp: sumExp operator sumExp
  106       | sumExp operator error
  107       | sumExp

  108 unaryRelExp: NOT unaryRelExp
  109            | relExp
  110            | NOT error

  111 operator: GREAT
  112         | GEQ
  113         | LESS
  114         | LEQ
  115         | EQUAL
  116         | NEQ

  117 sumExp: sumExp sumop mulExp
  118       | mulExp
  119       | sumExp sumop error

  120 sumop: PLUS
  121      | MINUS

  122 mulExp: mulExp mulop unaryExp
  123       | unaryExp
  124       | mulExp mulop error

  125 mulop: MULT
  126      | DIV
  127      | MOD

  128 unaryExp: unaryop unaryExp
  129         | factor
  130         | unaryop error

  131 unaryop: MINUS
  132        | MULT
  133        | QUESTION

  134 mutable: ID
  135        | ID OBRACKET exp CBRACKET

  136 immutable: OPAREN exp CPAREN
  137          | call
  138          | constant
  139          | OPAREN error

  140 factor: mutable
  141       | immutable

  142 call: ID OPAREN args CPAREN
  143     | error OPAREN

  144 args: argList
  145     | ε

  146 argList: argList COMMA exp
  147        | exp
  148        | argList COMMA error

  149 constant: NUMCONST
  150         | CHARCONST
  151         | BOOLCONST
  152         | STRINGCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 8 9 13 15 18 21 22 28 29 30 31 36 37 39 42 43 52 53 54 55 56 57 58 63 64 67 79 80 81 84 95 96 97 98 101 104 106 110 119 124 130 139 143 148
    ID <tokenData> (258) 19 20 21 26 27 29 30 31 44 45 51 57 62 134 135 142
    NUMCONST <tokenData> (259) 20 149
    CHARCONST <tokenData> (260) 150
    STRINGCONST <tokenData> (261) 152
    ASGN <tokenData> (262) 51 57 62 86
    ADDASGN <tokenData> (263) 87
    SUBASS <tokenData> (264) 88
    INC <tokenData> (265) 93 97
    DEC <tokenData> (266) 94 98
    GEQ <tokenData> (267) 112
    LEQ <tokenData> (268) 114
    NEQ <tokenData> (269) 116
    MULASS <tokenData> (270) 89
    DIVASS <tokenData> (271) 90
    INT <tokenData> (272) 23
    IF <tokenData> (273) 49 52 53 54 59 60 63 64
    OR <tokenData> (274) 99 101
    NOT <tokenData> (275) 108 110
    BY <tokenData> (276) 78 80 81
    ELSE <tokenData> (277) 49 53 54 59 64
    THEN <tokenData> (278) 49 54 59 60 63 64
    FOR <tokenData> (279) 51 57 58 62
    BREAK <tokenData> (280) 85
    RETURN <tokenData> (281) 82 83 84
    BOOL <tokenData> (282) 25
    CHAR <tokenData> (283) 24
    STATIC <tokenData> (284) 10
    AND <tokenData> (285) 102 104
    BEGN <tokenData> (286) 72
    FINISH <tokenData> (287) 72
    DO <tokenData> (288) 50 51 55 57 61 62
    WHILE <tokenData> (289) 50 55 56 61
    TO <tokenData> (290) 77 78 79 81
    BOOLCONST <tokenData> (291) 151
    QUESTION <tokenData> (292) 133
    LESS <tokenData> (293) 113
    GREAT <tokenData> (294) 111
    PLUS <tokenData> (295) 120
    EQUAL <tokenData> (296) 115
    MULT <tokenData> (297) 125 132
    DIV <tokenData> (298) 126
    MOD <tokenData> (299) 127
    COMMA <tokenData> (300) 12 13 40 42 146 148
    OBRACKET <tokenData> (301) 20 21 45 135
    CBRACKET <tokenData> (302) 20 22 45 135
    MINUS <tokenData> (303) 121 131
    COLON <tokenData> (304) 17 18
    SEMICOLON <tokenData> (305) 7 8 9 10 11 34 36 65 66 67 82 83 84 85
    OPAREN <tokenData> (306) 26 27 29 30 31 136 139 142 143
    CPAREN <tokenData> (307) 26 27 31 136 142


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1
        on right: 0
    declarationList <node> (55)
        on left: 2 3
        on right: 1 2
    declaration <node> (56)
        on left: 4 5 6
        on right: 2 3
    varDeclaration <node> (57)
        on left: 7 8 9
        on right: 5
    scopedtypespecificer <node> (58)
        on left: 10 11
        on right: 73
    vardeclarationList <node> (59)
        on left: 12 13 14 15
        on right: 7 8 10 11 12 13
    varDeclarationInit <node> (60)
        on left: 16 17 18
        on right: 12 14
    varDeclarationId <node> (61)
        on left: 19 20 21 22
        on right: 16 17
    typespec <type> (62)
        on left: 23 24 25
        on right: 7 9 10 11 26 28 29 38 39
    funDeclaration <node> (63)
        on left: 26 27 28 29 30 31
        on right: 4
    parameters <node> (64)
        on left: 32 33
        on right: 26 27 31
    parameterList <node> (65)
        on left: 34 35 36 37
        on right: 32 34 36
    parameterTypeList <node> (66)
        on left: 38 39
        on right: 34 35
    parameterIdList <node> (67)
        on left: 40 41 42 43
        on right: 38 40 42
    parameterId <node> (68)
        on left: 44 45
        on right: 40 41
    statement <node> (69)
        on left: 46 47
        on right: 60 63 75
    matched <node> (70)
        on left: 48 49 50 51 52 53 54 55 56 57 58
        on right: 46 49 50 51 53 54 55 57 59 64
    unmatched <node> (71)
        on left: 59 60 61 62 63 64
        on right: 47 59 61 62 64
    expstatement <node> (72)
        on left: 65 66 67
        on right: 68
    statementEnd <node> (73)
        on left: 68 69 70 71
        on right: 48
    compoundstatement <node> (74)
        on left: 72
        on right: 26 27 69
    localdeclaration <node> (75)
        on left: 73 74
        on right: 72 73
    statementList <node> (76)
        on left: 75 76
        on right: 72 75
    iterRange <node> (77)
        on left: 77 78 79 80 81
        on right: 51 62
    returnstatement <node> (78)
        on left: 82 83 84
        on right: 71
    breakstatement <node> (79)
        on left: 85
        on right: 70
    asgnop <node> (80)
        on left: 86 87 88 89 90
        on right: 91 95 96
    exp <node> (81)
        on left: 91 92 93 94 95 96 97 98
        on right: 65 83 91 95 135 136 146 147
    simpleExp <node> (82)
        on left: 99 100 101
        on right: 17 18 49 50 59 60 61 77 78 79 81 92 99 101
    andExp <node> (83)
        on left: 102 103 104
        on right: 99 100 102 104
    relExp <node> (84)
        on left: 105 106 107
        on right: 109
    unaryRelExp <node> (85)
        on left: 108 109 110
        on right: 102 103 108
    operator <node> (86)
        on left: 111 112 113 114 115 116
        on right: 105 106
    sumExp <node> (87)
        on left: 117 118 119
        on right: 105 106 107 117 119
    sumop <node> (88)
        on left: 120 121
        on right: 117 119
    mulExp <node> (89)
        on left: 122 123 124
        on right: 117 118 122 124
    mulop <node> (90)
        on left: 125 126 127
        on right: 122 124
    unaryExp <node> (91)
        on left: 128 129 130
        on right: 122 123 128
    unaryop <node> (92)
        on left: 131 132 133
        on right: 128 130
    mutable <node> (93)
        on left: 134 135
        on right: 91 93 94 96 140
    immutable <node> (94)
        on left: 136 137 138 139
        on right: 141
    factor <node> (95)
        on left: 140 141
        on right: 129
    call <node> (96)
        on left: 142 143
        on right: 137
    args <node> (97)
        on left: 144 145
        on right: 142
    argList <node> (98)
        on left: 146 147 148
        on right: 144 146 148
    constant <node> (99)
        on left: 149 150 151 152
        on right: 138


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program          go to state 6
    declarationList  go to state 7
    declaration      go to state 8
    varDeclaration   go to state 9
    typespec         go to state 10
    funDeclaration   go to state 11


State 1

    6 declaration: error •
    8 varDeclaration: error • vardeclarationList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (declaration)
    error  [reduce using rule 6 (declaration)]
    ID     [reduce using rule 6 (declaration)]
    INT    reduce using rule 6 (declaration)
    BOOL   reduce using rule 6 (declaration)
    CHAR   reduce using rule 6 (declaration)

    vardeclarationList  go to state 14
    varDeclarationInit  go to state 15
    varDeclarationId    go to state 16


State 2

   27 funDeclaration: ID • OPAREN parameters CPAREN compoundstatement
   30               | ID • OPAREN error
   31               | ID • OPAREN parameters CPAREN error

    OPAREN  shift, and go to state 17


State 3

   23 typespec: INT •

    $default  reduce using rule 23 (typespec)


State 4

   25 typespec: BOOL •

    $default  reduce using rule 25 (typespec)


State 5

   24 typespec: CHAR •

    $default  reduce using rule 24 (typespec)


State 6

    0 $accept: program • $end

    $end  shift, and go to state 18


State 7

    1 program: declarationList •
    2 declarationList: declarationList • declaration

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration     go to state 19
    varDeclaration  go to state 9
    typespec        go to state 10
    funDeclaration  go to state 11


State 8

    3 declarationList: declaration •

    $default  reduce using rule 3 (declarationList)


State 9

    5 declaration: varDeclaration •

    $default  reduce using rule 5 (declaration)


State 10

    7 varDeclaration: typespec • vardeclarationList SEMICOLON
    9               | typespec • error SEMICOLON
   26 funDeclaration: typespec • ID OPAREN parameters CPAREN compoundstatement
   28               | typespec • error
   29               | typespec • ID OPAREN error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    vardeclarationList  go to state 22
    varDeclarationInit  go to state 15
    varDeclarationId    go to state 16


State 11

    4 declaration: funDeclaration •

    $default  reduce using rule 4 (declaration)


State 12

   15 vardeclarationList: error •
   18 varDeclarationInit: error • COLON simpleExp
   22 varDeclarationId: error • CBRACKET

    CBRACKET  shift, and go to state 23
    COLON     shift, and go to state 24

    $default  reduce using rule 15 (vardeclarationList)


State 13

   19 varDeclarationId: ID •
   20                 | ID • OBRACKET NUMCONST CBRACKET
   21                 | ID • OBRACKET error

    OBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (varDeclarationId)


State 14

    8 varDeclaration: error vardeclarationList • SEMICOLON
   12 vardeclarationList: vardeclarationList • COMMA varDeclarationInit
   13                   | vardeclarationList • COMMA error

    COMMA      shift, and go to state 26
    SEMICOLON  shift, and go to state 27


State 15

   14 vardeclarationList: varDeclarationInit •

    $default  reduce using rule 14 (vardeclarationList)


State 16

   16 varDeclarationInit: varDeclarationId •
   17                   | varDeclarationId • COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclarationInit)


State 17

   27 funDeclaration: ID OPAREN • parameters CPAREN compoundstatement
   30               | ID OPAREN • error
   31               | ID OPAREN • parameters CPAREN error

    error  shift, and go to state 29
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    CPAREN  reduce using rule 33 (parameters)

    typespec           go to state 30
    parameters         go to state 31
    parameterList      go to state 32
    parameterTypeList  go to state 33


State 18

    0 $accept: program $end •

    $default  accept


State 19

    2 declarationList: declarationList declaration •

    $default  reduce using rule 2 (declarationList)


State 20

    9 varDeclaration: typespec error • SEMICOLON
   15 vardeclarationList: error •
   18 varDeclarationInit: error • COLON simpleExp
   22 varDeclarationId: error • CBRACKET
   28 funDeclaration: typespec error •

    CBRACKET   shift, and go to state 23
    COLON      shift, and go to state 24
    SEMICOLON  shift, and go to state 34

    COMMA      reduce using rule 15 (vardeclarationList)
    SEMICOLON  [reduce using rule 15 (vardeclarationList)]
    $default   reduce using rule 28 (funDeclaration)


State 21

   19 varDeclarationId: ID •
   20                 | ID • OBRACKET NUMCONST CBRACKET
   21                 | ID • OBRACKET error
   26 funDeclaration: typespec ID • OPAREN parameters CPAREN compoundstatement
   29               | typespec ID • OPAREN error

    OBRACKET  shift, and go to state 25
    OPAREN    shift, and go to state 35

    $default  reduce using rule 19 (varDeclarationId)


State 22

    7 varDeclaration: typespec vardeclarationList • SEMICOLON
   12 vardeclarationList: vardeclarationList • COMMA varDeclarationInit
   13                   | vardeclarationList • COMMA error

    COMMA      shift, and go to state 26
    SEMICOLON  shift, and go to state 36


State 23

   22 varDeclarationId: error CBRACKET •

    $default  reduce using rule 22 (varDeclarationId)


State 24

   18 varDeclarationInit: error COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 56
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 25

   20 varDeclarationId: ID OBRACKET • NUMCONST CBRACKET
   21                 | ID OBRACKET • error

    error     shift, and go to state 61
    NUMCONST  shift, and go to state 62


State 26

   12 vardeclarationList: vardeclarationList COMMA • varDeclarationInit
   13                   | vardeclarationList COMMA • error

    error  shift, and go to state 63
    ID     shift, and go to state 13

    varDeclarationInit  go to state 64
    varDeclarationId    go to state 16


State 27

    8 varDeclaration: error vardeclarationList SEMICOLON •

    $default  reduce using rule 8 (varDeclaration)


State 28

   17 varDeclarationInit: varDeclarationId COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    simpleExp    go to state 65
    andExp       go to state 49
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 56
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 29

   30 funDeclaration: ID OPAREN error •
   37 parameterList: error •

    SEMICOLON  reduce using rule 37 (parameterList)
    CPAREN     reduce using rule 37 (parameterList)
    $default   reduce using rule 30 (funDeclaration)


State 30

   38 parameterTypeList: typespec • parameterIdList
   39                  | typespec • error

    error  shift, and go to state 66
    ID     shift, and go to state 67

    parameterIdList  go to state 68
    parameterId      go to state 69


State 31

   27 funDeclaration: ID OPAREN parameters • CPAREN compoundstatement
   31               | ID OPAREN parameters • CPAREN error

    CPAREN  shift, and go to state 70


State 32

   32 parameters: parameterList •
   34 parameterList: parameterList • SEMICOLON parameterTypeList
   36              | parameterList • SEMICOLON error

    SEMICOLON  shift, and go to state 71

    $default  reduce using rule 32 (parameters)


State 33

   35 parameterList: parameterTypeList •

    $default  reduce using rule 35 (parameterList)


State 34

    9 varDeclaration: typespec error SEMICOLON •

    $default  reduce using rule 9 (varDeclaration)


State 35

   26 funDeclaration: typespec ID OPAREN • parameters CPAREN compoundstatement
   29               | typespec ID OPAREN • error

    error  shift, and go to state 72
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    CPAREN  reduce using rule 33 (parameters)

    typespec           go to state 30
    parameters         go to state 73
    parameterList      go to state 32
    parameterTypeList  go to state 33


State 36

    7 varDeclaration: typespec vardeclarationList SEMICOLON •

    $default  reduce using rule 7 (varDeclaration)


State 37

  143 call: error • OPAREN

    OPAREN  shift, and go to state 74


State 38

  134 mutable: ID •
  135        | ID • OBRACKET exp CBRACKET
  142 call: ID • OPAREN args CPAREN

    OBRACKET  shift, and go to state 75
    OPAREN    shift, and go to state 76

    $default  reduce using rule 134 (mutable)


State 39

  149 constant: NUMCONST •

    $default  reduce using rule 149 (constant)


State 40

  150 constant: CHARCONST •

    $default  reduce using rule 150 (constant)


State 41

  152 constant: STRINGCONST •

    $default  reduce using rule 152 (constant)


State 42

  108 unaryRelExp: NOT • unaryRelExp
  110            | NOT • error

    error        shift, and go to state 77
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    relExp       go to state 50
    unaryRelExp  go to state 78
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 56
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 43

  151 constant: BOOLCONST •

    $default  reduce using rule 151 (constant)


State 44

  133 unaryop: QUESTION •

    $default  reduce using rule 133 (unaryop)


State 45

  132 unaryop: MULT •

    $default  reduce using rule 132 (unaryop)


State 46

  131 unaryop: MINUS •

    $default  reduce using rule 131 (unaryop)


State 47

  136 immutable: OPAREN • exp CPAREN
  139          | OPAREN • error

    error        shift, and go to state 79
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    exp          go to state 80
    simpleExp    go to state 81
    andExp       go to state 49
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 82
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 48

   18 varDeclarationInit: error COLON simpleExp •
   99 simpleExp: simpleExp • OR andExp
  101          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 18 (varDeclarationInit)


State 49

  100 simpleExp: andExp •
  102 andExp: andExp • AND unaryRelExp
  104       | andExp • AND error

    AND  shift, and go to state 84

    $default  reduce using rule 100 (simpleExp)


State 50

  109 unaryRelExp: relExp •

    $default  reduce using rule 109 (unaryRelExp)


State 51

  103 andExp: unaryRelExp •

    $default  reduce using rule 103 (andExp)


State 52

  105 relExp: sumExp • operator sumExp
  106       | sumExp • operator error
  107       | sumExp •
  117 sumExp: sumExp • sumop mulExp
  119       | sumExp • sumop error

    GEQ    shift, and go to state 85
    LEQ    shift, and go to state 86
    NEQ    shift, and go to state 87
    LESS   shift, and go to state 88
    GREAT  shift, and go to state 89
    PLUS   shift, and go to state 90
    EQUAL  shift, and go to state 91
    MINUS  shift, and go to state 92

    $default  reduce using rule 107 (relExp)

    operator  go to state 93
    sumop     go to state 94


State 53

  118 sumExp: mulExp •
  122 mulExp: mulExp • mulop unaryExp
  124       | mulExp • mulop error

    MULT  shift, and go to state 95
    DIV   shift, and go to state 96
    MOD   shift, and go to state 97

    $default  reduce using rule 118 (sumExp)

    mulop  go to state 98


State 54

  123 mulExp: unaryExp •

    $default  reduce using rule 123 (mulExp)


State 55

  128 unaryExp: unaryop • unaryExp
  130         | unaryop • error

    error        shift, and go to state 99
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    unaryExp   go to state 100
    unaryop    go to state 55
    mutable    go to state 56
    immutable  go to state 57
    factor     go to state 58
    call       go to state 59
    constant   go to state 60


State 56

  140 factor: mutable •

    $default  reduce using rule 140 (factor)


State 57

  141 factor: immutable •

    $default  reduce using rule 141 (factor)


State 58

  129 unaryExp: factor •

    $default  reduce using rule 129 (unaryExp)


State 59

  137 immutable: call •

    $default  reduce using rule 137 (immutable)


State 60

  138 immutable: constant •

    $default  reduce using rule 138 (immutable)


State 61

   21 varDeclarationId: ID OBRACKET error •

    $default  reduce using rule 21 (varDeclarationId)


State 62

   20 varDeclarationId: ID OBRACKET NUMCONST • CBRACKET

    CBRACKET  shift, and go to state 101


State 63

   13 vardeclarationList: vardeclarationList COMMA error •
   18 varDeclarationInit: error • COLON simpleExp
   22 varDeclarationId: error • CBRACKET

    CBRACKET  shift, and go to state 23
    COLON     shift, and go to state 24

    $default  reduce using rule 13 (vardeclarationList)


State 64

   12 vardeclarationList: vardeclarationList COMMA varDeclarationInit •

    $default  reduce using rule 12 (vardeclarationList)


State 65

   17 varDeclarationInit: varDeclarationId COLON simpleExp •
   99 simpleExp: simpleExp • OR andExp
  101          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 17 (varDeclarationInit)


State 66

   39 parameterTypeList: typespec error •
   43 parameterIdList: error •

    COMMA      reduce using rule 43 (parameterIdList)
    SEMICOLON  reduce using rule 39 (parameterTypeList)
    SEMICOLON  [reduce using rule 43 (parameterIdList)]
    CPAREN     reduce using rule 39 (parameterTypeList)
    CPAREN     [reduce using rule 43 (parameterIdList)]
    $default   reduce using rule 39 (parameterTypeList)


State 67

   44 parameterId: ID •
   45            | ID • OBRACKET CBRACKET

    OBRACKET  shift, and go to state 102

    $default  reduce using rule 44 (parameterId)


State 68

   38 parameterTypeList: typespec parameterIdList •
   40 parameterIdList: parameterIdList • COMMA parameterId
   42                | parameterIdList • COMMA error

    COMMA  shift, and go to state 103

    $default  reduce using rule 38 (parameterTypeList)


State 69

   41 parameterIdList: parameterId •

    $default  reduce using rule 41 (parameterIdList)


State 70

   27 funDeclaration: ID OPAREN parameters CPAREN • compoundstatement
   31               | ID OPAREN parameters CPAREN • error

    error  shift, and go to state 104
    BEGN   shift, and go to state 105

    compoundstatement  go to state 106


State 71

   34 parameterList: parameterList SEMICOLON • parameterTypeList
   36              | parameterList SEMICOLON • error

    error  shift, and go to state 107
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    typespec           go to state 30
    parameterTypeList  go to state 108


State 72

   29 funDeclaration: typespec ID OPAREN error •
   37 parameterList: error •

    SEMICOLON  reduce using rule 37 (parameterList)
    CPAREN     reduce using rule 37 (parameterList)
    $default   reduce using rule 29 (funDeclaration)


State 73

   26 funDeclaration: typespec ID OPAREN parameters • CPAREN compoundstatement

    CPAREN  shift, and go to state 109


State 74

  143 call: error OPAREN •

    $default  reduce using rule 143 (call)


State 75

  135 mutable: ID OBRACKET • exp CBRACKET

    error        shift, and go to state 110
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    exp          go to state 111
    simpleExp    go to state 81
    andExp       go to state 49
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 82
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 76

  142 call: ID OPAREN • args CPAREN

    error        shift, and go to state 110
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    CPAREN  reduce using rule 145 (args)

    exp          go to state 112
    simpleExp    go to state 81
    andExp       go to state 49
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 82
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    args         go to state 113
    argList      go to state 114
    constant     go to state 60


State 77

  110 unaryRelExp: NOT error •
  143 call: error • OPAREN

    OPAREN  shift, and go to state 74

    $default  reduce using rule 110 (unaryRelExp)


State 78

  108 unaryRelExp: NOT unaryRelExp •

    $default  reduce using rule 108 (unaryRelExp)


State 79

   95 exp: error • asgnop exp
   97    | error • INC
   98    | error • DEC
  139 immutable: OPAREN error •
  143 call: error • OPAREN

    ASGN     shift, and go to state 115
    ADDASGN  shift, and go to state 116
    SUBASS   shift, and go to state 117
    INC      shift, and go to state 118
    DEC      shift, and go to state 119
    MULASS   shift, and go to state 120
    DIVASS   shift, and go to state 121
    OPAREN   shift, and go to state 74

    $default  reduce using rule 139 (immutable)

    asgnop  go to state 122


State 80

  136 immutable: OPAREN exp • CPAREN

    CPAREN  shift, and go to state 123


State 81

   92 exp: simpleExp •
   99 simpleExp: simpleExp • OR andExp
  101          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 92 (exp)


State 82

   91 exp: mutable • asgnop exp
   93    | mutable • INC
   94    | mutable • DEC
   96    | mutable • asgnop error
  140 factor: mutable •

    ASGN     shift, and go to state 115
    ADDASGN  shift, and go to state 116
    SUBASS   shift, and go to state 117
    INC      shift, and go to state 124
    DEC      shift, and go to state 125
    MULASS   shift, and go to state 120
    DIVASS   shift, and go to state 121

    $default  reduce using rule 140 (factor)

    asgnop  go to state 126


State 83

   99 simpleExp: simpleExp OR • andExp
  101          | simpleExp OR • error

    error        shift, and go to state 127
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47

    andExp       go to state 128
    relExp       go to state 50
    unaryRelExp  go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    mutable      go to state 56
    immutable    go to state 57
    factor       go to state 58
    call         go to state 59
    constant     go to state 60


State 84

  102 andExp: andExp AND • unaryRelExp
  104       | andExp AND • error

    error        shift, and go to state 129
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    NOT          shift, and go to state 42
    BOOLCONST    shift, and go to state 43
    QUESTION     shift, and go to state 44
    MULT         shift, and go to state 45
    MINUS        shift, and go to state 46
    OPAREN       shift, and go to state 47
